# rust-wasm-template

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  index.js
src/: lib.rs  task.rs
web/: package.json  webpack.config.js
web/src/: index.html  index.js
