[package]
name = "rust-wasm-template"
version = "0.1.0"
edition = "2024"
description = "A template for Rust and WebAssembly projects"
repository = "https://github.com/manonja/rust-wasm-template"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"
console_error_panic_hook = { version = "0.1.7", optional = true }
wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true
